tests/invalid_programs/types/add_two_strings.duck
fun x() {
    let x: String = "Hallo";
    let y: String = "Hallo";
    x + y;
}
